Post v22.06.0
-------------
  - ovn-controller: Add configuration knob, through OVS external-id
    "ovn-encap-df_default" to enable or disable tunnel DF flag.
  - Add option "localnet_learn_fdb" to LSP that will allow localnet
    ports to learn MAC addresses and store them in FDB table.

OVN v22.06.0 - XX XXX XXXX
--------------------------
  - Support IGMP and MLD snooping on transit logical switches that connect
    different OVN Interconnection availability zones.
  - Replaced the usage of masked ct_label by ct_mark in most cases to work
    better with hardware-offloading.
  - Support NAT for logical routers with multiple distributed gateway ports.
  - Add global option (NB_Global.options:default_acl_drop) to enable
    implicit drop behavior on logical switches with ACLs applied.
  - Support (LSP.options:qos_min_rate) to guarantee minimal bandwidth available
    for a logical port.
  - Add NB.Load_Balancer.options:neighbor_responder to allow the CMS to
    explicitly request routers to reply to any ARP/ND request for a VIP
    (when set to "all") and only for reachable VIPs (when set to "reachable"
    or by default).
  - Changed the way to enable northd parallelization.
    Removed support for:
    - use_parallel_build in NBDB.
    - --dummy-numa in northd cmdline.
    Added support for:
    -  --n-threads=<N> in northd cmdline.
    - set-n-threads/get-n-threads unixctls.
    - --ovn-northd-n-threads command line argument in ovn-ctl
  - Added support for setting the Next server IP in the DHCP header
    using the private DHCP option - 253 in native OVN DHCPv4 responder.
  - Support list of chassis for Logical_Switch_Port:options:requested-chassis.

OVN v22.03.0 - 11 Mar 2022
--------------------------
  - Refactor CoPP commands introducing a unique name index in CoPP NB table.
    Add following new CoPP commands to manage CoPP table:
    - ovn-nbctl copp-add <name> <proto> <meter>
    - ovn-nbctl copp-del <name> <proto>
    - ovn-nbctl copp-list <name>